--- a/InvisibleHand.csproj
+++ b/InvisibleHand.csproj
@@ -57,6 +57,9 @@
       <Reference Include="System.ServiceModel">
         <HintPath>..\ref\System.ServiceModel.dll</HintPath>
       </Reference>
+      <Reference Include="System.Numerics">
+        <HintPath>..\ref\System.Numerics.dll</HintPath>
+      </Reference>
       <Reference Include="mscorlib">
         <HintPath>..\ref\mscorlib.dll</HintPath>
       </Reference>
