--- a/InvisibleHand.csproj
+++ b/InvisibleHand.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Interface\ButtonMaker.cs" />
     <Compile Include="Interface\ButtonState.cs" />
     <Compile Include="Interface\IHButton.cs" />
+    <Compile Include="Interface\ReplacerButtons.cs" />
     <Compile Include="DynamicQuery\Dynamic.cs" />
   </ItemGroup>
   <ItemGroup>
