--- a/InvisibleHand.csproj
+++ b/InvisibleHand.csproj
@@ -85,7 +85,7 @@
     <Compile Include="Interface\ActionButtons.cs" />
     <Compile Include="Interface\ButtonBase.cs" />
     <Compile Include="Interface\ButtonLayer.cs" />
-    <Compile Include="Interface\ButtonMaker.cs" />
+    <Compile Include="Interface\ButtonFactory.cs" />
     <Compile Include="Interface\ButtonState.cs" />
     <Compile Include="Interface\IHButton.cs" />
     <Compile Include="Interface\ReplacerButtons.cs" />
