--- a/InvisibleHand.csproj
+++ b/InvisibleHand.csproj
@@ -89,7 +89,9 @@
     <Compile Include="Interface\ButtonState.cs" />
     <Compile Include="Interface\EditChest.cs" />
     <Compile Include="Interface\IHButton.cs" />
-    <Compile Include="Interface\ReplacerButtons.cs" />
+    <Compile Include="Interface\ButtonRebase.cs" />
+    <Compile Include="Interface\ButtonService.cs" />
+    <Compile Include="Interface\CoreButton.cs" />
     <Compile Include="DynamicQuery\Dynamic.cs" />
   </ItemGroup>
   <ItemGroup>
