--- a/InvisibleHand.csproj
+++ b/InvisibleHand.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Interface\ButtonService.cs" />
     <Compile Include="Interface\CoreButton.cs" />
     <Compile Include="Interface\ReplacerButtons.cs" />
+    <Compile Include="Interface\ButtonDrawHandler.cs" />
     <Compile Include="DynamicQuery\Dynamic.cs" />
   </ItemGroup>
   <ItemGroup>
