--- a/InvisibleHand.csproj
+++ b/InvisibleHand.csproj
@@ -89,10 +89,11 @@
     <Compile Include="Interface\ButtonState.cs" />
     <Compile Include="Interface\EditChest.cs" />
     <Compile Include="Interface\IHButton.cs" />
-    <Compile Include="Interface\ButtonRebase.cs" />
-    <Compile Include="Interface\ButtonService.cs" />
-    <Compile Include="Interface\CoreButton.cs" />
     <Compile Include="Interface\ReplacerButtons.cs" />
+    <Compile Include="InterfaceRework\ButtonContainerLayer.cs" />
+    <Compile Include="InterfaceRework\ButtonRebase.cs" />
+    <Compile Include="InterfaceRework\ButtonService.cs" />
+    <Compile Include="InterfaceRework\CoreButton.cs" />
     <Compile Include="DynamicQuery\Dynamic.cs" />
   </ItemGroup>
   <ItemGroup>
