--- a/InvisibleHand.csproj
+++ b/InvisibleHand.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Interface\IHButton.cs" />
     <Compile Include="Interface\ReplacerButtons.cs" />
     <Compile Include="InterfaceRework\ButtonContainerLayer.cs" />
+    <Compile Include="InterfaceRework\ButtonHooks.cs" />
     <Compile Include="InterfaceRework\ButtonRebase.cs" />
     <Compile Include="InterfaceRework\ButtonService.cs" />
     <Compile Include="InterfaceRework\CoreButton.cs" />
