--- a/InvisibleHand.csproj
+++ b/InvisibleHand.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Constants.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="IHBase.cs" />
+    <Compile Include="IHEvent.cs" />
     <Compile Include="IHInterface.cs" />
     <Compile Include="IHOrganizer.cs" />
     <Compile Include="IHPlayer.cs" />
@@ -90,12 +91,14 @@
     <Compile Include="Interface\EditChest.cs" />
     <Compile Include="Interface\IHButton.cs" />
     <Compile Include="Interface\ReplacerButtons.cs" />
-    <Compile Include="InterfaceRework\ButtonContainerLayer.cs" />
-    <Compile Include="InterfaceRework\ButtonHooks.cs" />
-    <Compile Include="InterfaceRework\ButtonRebase.cs" />
-    <Compile Include="InterfaceRework\ButtonService.cs" />
-    <Compile Include="InterfaceRework\CoreButton.cs" />
-    <Compile Include="InterfaceRework\ReplaceChestButtons.cs" />
+    <Compile Include="InterfaceCore\ButtonContainerLayer.cs" />
+    <Compile Include="InterfaceCore\ButtonService.cs" />
+    <Compile Include="InterfaceCore\ButtonSocket.cs" />
+    <Compile Include="InterfaceCore\CoreButton.cs" />
+    <Compile Include="InterfaceRework\ButtonTypes.cs" />
+    <Compile Include="InterfaceRework\LayerTypes.cs" />
+    <Compile Include="InterfaceRework\ServiceTypes.cs" />
+    <Compile Include="InterfaceRework\SocketTypes.cs" />
     <Compile Include="DynamicQuery\Dynamic.cs" />
   </ItemGroup>
   <ItemGroup>
