--- a/InvisibleHand.csproj
+++ b/InvisibleHand.csproj
@@ -83,22 +83,15 @@
     <Compile Include="IHUtils.cs" />
     <Compile Include="IHWorld.cs" />
     <Compile Include="KeyEventProvider.cs" />
-    <Compile Include="Interface\ActionButtons.cs" />
-    <Compile Include="Interface\ButtonBase.cs" />
-    <Compile Include="Interface\ButtonLayer.cs" />
-    <Compile Include="Interface\ButtonFactory.cs" />
-    <Compile Include="Interface\ButtonState.cs" />
+    <Compile Include="Interface\ButtonTypes.cs" />
     <Compile Include="Interface\EditChest.cs" />
-    <Compile Include="Interface\IHButton.cs" />
-    <Compile Include="Interface\ReplacerButtons.cs" />
-    <Compile Include="InterfaceCore\ButtonContainerLayer.cs" />
-    <Compile Include="InterfaceCore\ButtonService.cs" />
-    <Compile Include="InterfaceCore\ButtonSocket.cs" />
-    <Compile Include="InterfaceCore\CoreButton.cs" />
-    <Compile Include="InterfaceRework\ButtonTypes.cs" />
-    <Compile Include="InterfaceRework\LayerTypes.cs" />
-    <Compile Include="InterfaceRework\ServiceTypes.cs" />
-    <Compile Include="InterfaceRework\SocketTypes.cs" />
+    <Compile Include="Interface\LayerTypes.cs" />
+    <Compile Include="Interface\ServiceTypes.cs" />
+    <Compile Include="Interface\SocketTypes.cs" />
+    <Compile Include="Interface\Core\ButtonLayer.cs" />
+    <Compile Include="Interface\Core\ButtonService.cs" />
+    <Compile Include="Interface\Core\ButtonSocket.cs" />
+    <Compile Include="Interface\Core\CoreButton.cs" />
     <Compile Include="DynamicQuery\Dynamic.cs" />
   </ItemGroup>
   <ItemGroup>
